<resources>
    <string name="app_name">GeoQuiz</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="question_1">被称为万园之园的是颐和园</string>
    <string name="question_2">世界上最大的宫殿是克里姆林宫</string>
    <string name="question_3">热带鱼一般生活在咸水中</string>
    <string name="question_4">有钢琴诗人之称的是莫扎特</string>
    <string name="false_button">False</string>
    <string name="true_button">True</string>
    <string name="correct_toast">回答正确</string>
    <string name="incorrect_toast">回答错误</string>
    <string name="menu_settings">Setting</string>
    <string name="prev_button">Prev</string>
    <string name="next_button">Next</string>
    <string name="cheat_button">看答案</string>
    <string name="warning_text">你真想这样做吗？</string>
    <string name="show_answer_button">真的看答案！</string>
    <string name="judgment_toast">作弊是不对的！！！</string>
</resources>
